plugins/devkit/devkit-kotlin-tests/testData/inspections/registrationProblems/code/MyAbstractAction.kt
abstract class <error descr="Plugin component class must not be abstract">MyAbstractAction</error> : com.intellij.openapi.actionSystem.AnAction()